# homectl

./: .dockerignore  .editorconfig  .gitignore  .release-please-manifest.json  AGENTS.md  Cargo.toml  Dockerfile  README.md  TODO.md  flake.nix  release-please-config.json  renovate.json
.agent/rules/: agents.md
.github/workflows/: release-please.yml  server-ci.yml  ui-ci.yml
.moon/: tasks.yml  toolchain.yml  workspace.yml
cli/: Cargo.toml  moon.yml
cli/src/: client.rs  commands.rs  main.rs  output.rs
server/: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs  moon.yml
server/.sqlx/: query-022f90ca841786b89cd633a12f7ca16184a38c1583472d9f6ad89fcdb1d1a57c.json  query-06dfc441e4c1d82e8d6dcd616cffad0932c705b5fef733ecaffe08277bacfce3.json  query-0ba59c70bcb2f0a4ce0131c7cdbcd60cd6ff1f1a2ef865d223301ce4186c2515.json  query-0bef4fdc64523ce2aed5e3499501b7ca251a515311120b574768094cb6377e5e.json  query-107dee74862b5b3a9f4d2dc413e2d28011997c1936bf5ee2429e511ec7b0c586.json  query-134da6b5e9d9230ee34c27addc255b807479189c2038e8420519aab106efd2f6.json  query-14e77348d4e065d7ee9b5e3254817de59c2521f8c73435664a107d1bd45c878a.json  query-1979cf197deeccb4027f0105cca03d8d1d405df836248f1abff48e4e487c0ddd.json  query-1c173ec40fa028e59b7a4e01cf35f9efd4d33bd1e21fe2f42b0cce7b383a6e31.json  query-2a09a344bd2381a4a830cb1a677a723b324be7957aa260859200f1c613def5b6.json  (+44 more)
ui/: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  eslint.config.mjs  index.html  moon.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
(+264 files in other folders)
