[package]
name = "homectl-cli"
version = "0.1.0"
edition = "2021"
description = "CLI utility for interacting with the homectl server API"

[[bin]]
name = "homectl"
path = "src/main.rs"

[dependencies]
clap = { version = "=4.5.48", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "=1.0.226", features = ["derive"] }
serde_json = "=1.0.145"
tokio = { version = "=1.47.1", features = ["rt-multi-thread", "macros"] }
colored = "3"
tabled = "0.18"
